# ml-notebooks

./: .gitignore  README.md  flake.nix  pyproject.toml
diffusion/: README.md  main.py  model.py  pyproject.toml  scheduler.py
dqn/: main.py  pyproject.toml
gpu/: pyproject.toml  test.py
gpu/implementations/cuda/: 01_indexing.cu
gpu/implementations/triton/: softmax.py  vector_add.py
gpu/triton/: softmax.py  vector_add.py
llm/: pyproject.toml  transformer.py
rl/: dqn.py  pyproject.toml
shared/: __init__.py  constants.py  pyproject.toml  utils.py
vae/: README.md  main.py  pyproject.toml
