[project]
name = "ml-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[tool.uv.workspace]
members = ["*"]
exclude = [".venv", ".git"]

[dependency-groups]
dev = ["ty>=0.0.1a19"]

[tool.ruff.lint]
ignore = ["E731"]
