[project]
name = "dqn"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "gymnasium[classic-control]>=1.2.0",
    "matplotlib>=3.10.5",
    "shared",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
shared = { workspace = true }

[dependency-groups]
dev = ["ipykernel>=6.30.1", "ipython>=9.4.0", "pip>=25.2"]
