[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["pathlib>=1.0.1", "torch>=2.8.0"]

[tool.setuptools]
packages = ["shared"]
package-dir = { "shared" = "." }
py-modules = []

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
